css: Fix alignment of date in recipient bar.
Vertically center aligned and right aligned with the message time.

--- a/static/styles/zulip.css
+++ b/static/styles/zulip.css
@@ -1253,11 +1253,13 @@ td.pointer {
     opacity: 0.75;
     font-size: calc(15em / 14);
     font-weight: 500;
-    padding: 3px 11px 2px 10px;
+    padding: 0 10px;
     line-height: 18px;
     text-align: right;
     font-variant: all-small-caps;
     letter-spacing: 0.02em;
+    display: flex;
+    align-items: center;
 
     &.hide-date {
         display: none;
